--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Prueba 1</title>
 </head>
 <body> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt reprehenderit in tenetur possimus maiores consequuntur amet unde deserunt et maxime, voluptatem iusto placeat ipsa dolores, dolorem ut consectetur laborum odit!
-    mi mamá me mima
+    mi mamá me mima veamos como se adapta esto en git
 </body>
 </html>
